--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'add-log'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.wenman.addlog"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -28,9 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
-addLog {
-    hookPoint = [
-            "com.wenman.addlog.MainActivity":["testAddLogMethod"]
-    ]
-    logPrinter = ["com.wenman.addlog.AsmLogger" : "logger"]
-}
+//addLog {
+//    hookPoint = [
+//            "com.wenman.addlog.MainActivity":["testAddLogMethod"]
+//    ]
+//    logPrinter = ["com.wenman.addlog.AsmLogger" : "logger"]
+//}
