--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'add-log'
 
 android {
     compileSdkVersion 28
@@ -27,9 +28,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
-//addLog {
-//    hookPoint = [
-//            "com.wenman.addlog.MainActivity":["testAddLogMethod"]
-//    ]
-//    logPrinter = ["com.wenman.addlog.AsmLogger" : "logger"]
-//}
+addLog {
+    hookPoint = [
+            "com.wenman.addlog.MainActivity":["testAddLogMethod"]
+    ]
+    logPrinter = ["com.wenman.addlog.AsmLogger" : "logger"]
+}
